--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,9 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-body {
+.site body {
   width: 90%;
   margin: auto;
-  border: 2px #18453B;
 }
 
 res-header p {
